pxc/tests/test_03_interface/inh_match4.px
namespace inh_match1;
import test_common "";

multithreaded interface ifoo {
  function void m(int x) const;
}

struct foo : ifoo : {
  function void m(int& x) const { println("foo"); } // error: passby
}

function void t1() {
  ptr{ifoo} p = ptr(foo());
  p->m(10);
}

t1();
